# kaybot10_ros2

./: README.md  package.xml  setup.cfg  setup.py
config/: display.rviz  kaybot10_controllers.yaml
launch/: display.launch.py  gazebo.launch.py
meshes/: base_link.stl  lt_foot_1.stl  lt_hip_1.stl  lt_pelvis_1.stl  lt_shin_1.stl  lt_thigh_1.stl  rt_foot_1.stl  rt_hip_1.stl  rt_pelvis_1.stl  rt_shin_1.stl  rt_thigh_1.stl
scripts/: auto_balance.py  kaybot_motion.py  kaybot_teleop.py
urdf/: kaybot10.gazebo  kaybot10.trans  kaybot10.xacro  materials.xacro
